<resources>
    <string name="app_name">KitchenTimer</string>

    <!-- Timers and buttons -->
    <string name="reset">Reset</string>
    <string name="resetAll">Reset All</string>
    <string name="timerDefaultValue">0:00:00</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <string name="settingsHeaderTTS">Text-to-Speech</string>
    <string name="settingsHeaderTTSDesc">Settings for TTS</string>
    <string name="speakElapsedTitle">Announce Elapsed Time</string>
    <string name="speakElapsedSummary">Announce a timers elapsed time every interval using text-to-speech</string>
    <string name="speakElapsedIntervalTitle">Interval (minutes)</string>
    <string name="speakElapsedIntervalSummary">Intervals TTS will announce the elapsed time</string>
    <string name="speakElapsedDefaultInterval">5</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>

    <string name="settingsKeepScreenOnTitle">Keep screen on</string>
    <string name="settingsKeepScreenOnSummary">Prevent the screen from turning off while timers are running</string>

    <!-- Notifications -->
    <string name="notifTimersRunning">Kitchen Timer</string>
    <string name="notifTimersNumber">Timer</string>
    <string name="notifXTimersRunning"> timers running</string>
    <string name="notifAction">Open app</string>

</resources>
