<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prefKeepScreenOn"
        android:summary="@string/settingsKeepScreenOnSummary"
        android:title="@string/settingsKeepScreenOnTitle"/>
    <PreferenceCategory
        android:summary="@string/settingsHeaderTTSDesc"
        android:title="@string/settingsHeaderTTS">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSpeakElapsed"
            android:summary="@string/speakElapsedSummary"
            android:title="@string/speakElapsedTitle"/>
        <com.jallier.kitchentimer.NumberPickerPreference
            android:defaultValue="@string/speakElapsedDefaultInterval"
            android:key="prefSpeakInterval"
            android:summary="@string/speakElapsedIntervalSummary"
            android:title="@string/speakElapsedIntervalTitle"/>
    </PreferenceCategory>
</PreferenceScreen>